# md2

./: DEVPLAN.md  pyproject.toml
examples/: chapter-cover.md
md2/: core.py
md2/templates/default/: style.css
md2/templates/default/components/: slide.html
tests/unit/: test_generate_css.py  test_m103_chart_width_fix.py  test_m104_bar_label_wrap.py  test_m105_chapter_cover.py  test_m106_fence_separator.py
